Fixed alignment issue with medium temperature

--- a/web/static/stylesheet.css
+++ b/web/static/stylesheet.css
@@ -44,7 +44,6 @@ h1 {
   font-size: 250%;
   color: darkorange;
   font-weight: bold;
-  padding-left: 50px;
 }
 
 .temperaturereadinglow {
